FIX: forgot to save

--- a/2023/day1-rust.ipynb
+++ b/2023/day1-rust.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0acc9b5b",
+   "id": "c2e5050f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-12-01T19:18:52.439889Z",
@@ -20,28 +20,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "id": "3012e0dc",
+   "execution_count": 188,
+   "id": "12fd2227",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-01T19:56:03.560555Z",
-     "start_time": "2023-12-01T19:56:03.114Z"
+     "end_time": "2023-12-01T21:34:52.957384Z",
+     "start_time": "2023-12-01T21:34:52.264Z"
     }
    },
    "outputs": [],
    "source": [
     "use std::fs;\n",
-    "let input = fs::read_to_string(\".day1-input.txt\");"
+    "let input = fs::read_to_string(\".day1-input.txt\").unwrap();"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "id": "4265235b",
+   "execution_count": 189,
+   "id": "0d93a6d9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-01T19:56:04.736470Z",
-     "start_time": "2023-12-01T19:56:04.192Z"
+     "end_time": "2023-12-01T21:34:53.532430Z",
+     "start_time": "2023-12-01T21:34:52.704Z"
     }
    },
    "outputs": [
@@ -55,12 +55,136 @@
    ],
    "source": [
     "let mut total: u32 = 0;\n",
-    "for line in input?.lines() {\n",
+    "for line in input.lines() {\n",
     "    let nums: Vec<_> = line.chars().filter(|c| c.is_numeric()).collect();\n",
     "    let num = format!(\"{}{}\", nums.first().unwrap(), nums.last().unwrap());\n",
     "    total += num.parse::<u32>().unwrap();\n",
     "}\n",
     "println!(\"{}\",total);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 383,
+   "id": "9d671f20",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-01T23:30:43.589757Z",
+     "start_time": "2023-12-01T23:30:43.015Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "let input = \"two1nine\n",
+    "eightwothree\n",
+    "abcone2threexyz\n",
+    "xtwone3four\n",
+    "4nineeightseven2\n",
+    "zoneight234\n",
+    "7pqrstsixteen\";"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 305,
+   "id": "d6a239dc",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-01T23:03:40.152188Z",
+     "start_time": "2023-12-01T23:03:36.364Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    ":dep fancy-regex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 490,
+   "id": "78cd2b3c",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-02T00:11:34.943207Z",
+     "start_time": "2023-12-02T00:11:34.322Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// no idea how to dynamically construct this\n",
+    "const numbers: [(&str, usize); 18] = [\n",
+    "    (\"one\",1), (\"1\", 1),\n",
+    "    (\"two\",2), (\"2\", 2),\n",
+    "    (\"three\",3), (\"3\", 3),\n",
+    "    (\"four\",4), (\"4\", 4),\n",
+    "    (\"five\",5), (\"5\", 5),\n",
+    "    (\"six\",6), (\"6\", 6),\n",
+    "    (\"seven\",7), (\"7\", 7),\n",
+    "    (\"eight\",8), (\"8\", 8),\n",
+    "    (\"nine\",9), (\"9\", 9)\n",
+    "];\n",
+    "let nummap: HashMap<&str, usize> = numbers.into();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 505,
+   "id": "29c71a60",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-02T00:14:52.078518Z",
+     "start_time": "2023-12-02T00:14:51.375Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "let pattern: String = format!(\"(?=({}))\", numbers.map(|e| e.0).join(\"|\"));\n",
+    "let re = Regex::new(&pattern).unwrap();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 507,
+   "id": "09354ca2",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-02T00:15:13.378796Z",
+     "start_time": "2023-12-02T00:15:12.764Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "let input = fs::read_to_string(\".day1-input-p2.txt\").unwrap();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 508,
+   "id": "b14017fd",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-02T00:15:14.199922Z",
+     "start_time": "2023-12-02T00:15:13.576Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 54578\n"
+     ]
+    }
+   ],
+   "source": [
+    "let mut total: u32 = 0;\n",
+    "for line in input.lines() {\n",
+    "    let matches: Vec<_> = re.captures_iter(line).map(|m| m.unwrap().get(1).unwrap().as_str()).collect();\n",
+    "    let nums: Vec<_> = matches.iter().map(|mat| nummap.get(mat).unwrap().to_string()).collect();\n",
+    "    let num = format!(\"{}{}\", nums.first().unwrap(), nums.last().unwrap());\n",
+    "    total += num.parse::<u32>().unwrap();\n",
+    "}\n",
+    "println!(\"total {}\",total);"
    ]
   }
  ],
