--- a/2023/day1-python.ipynb
+++ b/2023/day1-python.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 108,
    "id": "9d7ec84d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-01T19:56:51.085759Z",
-     "start_time": "2023-12-01T19:56:51.071232Z"
+     "end_time": "2023-12-02T00:21:48.525197Z",
+     "start_time": "2023-12-02T00:21:48.520097Z"
     }
    },
    "outputs": [],
@@ -74,21 +74,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "9bc932d8",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-12-01T23:18:44.974107Z",
-     "start_time": "2023-12-01T23:18:44.971885Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import re"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 73,
    "id": "795ecb30",
    "metadata": {
@@ -110,78 +95,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "f73c930a",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-12-01T23:18:45.321891Z",
-     "start_time": "2023-12-01T23:18:45.316948Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "numbers = [\"one\", \"two\", \"three\", \"four\", \"five\", \"six\", \"seven\", \"eight\", \"nine\"]\n",
-    "pat = re.compile(f\"(?=({'|'.join(numbers)}))\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "id": "d1475614",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-12-01T23:24:45.461033Z",
-     "start_time": "2023-12-01T23:24:45.455052Z"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "Lambda expression parameters cannot be parenthesized (3177867862.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[105], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    map(lambda (k,v): (k,v), numbers)\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Lambda expression parameters cannot be parenthesized\n"
-     ]
-    }
-   ],
-   "source": [
-    "map(lambda (k,v): (k,v), numbers)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "id": "cf788d65",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-12-01T23:22:59.150981Z",
-     "start_time": "2023-12-01T23:22:59.143679Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'(?=(one|two|three|four|five|six|seven|eight|nine))'"
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f\"(?=({'|'.join(numbers)}))\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 204,
    "id": "ecbb6120",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-01T23:18:45.771659Z",
-     "start_time": "2023-12-01T23:18:45.766203Z"
+     "end_time": "2023-12-02T00:46:09.621723Z",
+     "start_time": "2023-12-02T00:46:09.616492Z"
     }
    },
    "outputs": [],
@@ -192,66 +111,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "id": "ba2de173",
+   "execution_count": 146,
+   "id": "8f909eff",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-01T23:24:19.772209Z",
-     "start_time": "2023-12-01T23:24:19.765317Z"
+     "end_time": "2023-12-02T00:32:52.339657Z",
+     "start_time": "2023-12-02T00:32:52.289566Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from num2words import num2words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "id": "7c27f53b",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-02T00:46:59.455830Z",
+     "start_time": "2023-12-02T00:46:59.451117Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "numbers = dict(sum([ [(str(x),x), (num2words(x),x)] for x in range(1,10) ], []))\n",
+    "pat = re.compile(f\"(?=({'|'.join(numbers)}))\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "id": "f99f20d9",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-02T00:47:10.055365Z",
+     "start_time": "2023-12-02T00:47:10.038803Z"
     }
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-\n",
-      "<re.Match object; span=(19, 19), match=''>\n",
-      "two\n",
-      "2\n",
-      "-\n",
-      "<re.Match object; span=(21, 21), match=''>\n",
-      "one\n",
-      "1\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "0"
+       "54578"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "total = 0\n",
-    "for (n, line) in enumerate(input.split('\\n')):\n",
-    "    if line != \"gtzqvvsntvqnhrkxqb6twonebt\":\n",
-    "        continue\n",
-    "        \n",
-    "    for m in pat.finditer(line):\n",
-    "        print('-')\n",
-    "        print(m)\n",
-    "        print(m.group(1))\n",
-    "        print(numbers.index(m.group(1))+1)\n",
-    "\n",
-    "    #    v = m.group(0)\n",
-    "    #    line = line.replace(v, str(numbers.index(v)+1))\n",
-    "    #nums = [c for c in line if c.isnumeric()]\n",
-    "    #total += int(f\"{nums[0]}{nums[-1]}\")\n",
+    "for line in input.split('\\n'):\n",
+    "    nums = [ numbers[m.group(1)] for m in pat.finditer(line) ]\n",
+    "    total += int(f\"{nums[0]}{nums[-1]}\")\n",
     "total"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8f909eff",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
