made way faster

--- a/2023/day4-py.ipynb
+++ b/2023/day4-py.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "4f9976b3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-04T16:55:03.594041Z",
-     "start_time": "2023-12-04T16:55:03.590412Z"
+     "end_time": "2023-12-04T17:19:38.694580Z",
+     "start_time": "2023-12-04T17:19:38.683533Z"
     }
    },
    "outputs": [],
@@ -38,12 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "4c0c1d9e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-04T17:04:09.917036Z",
-     "start_time": "2023-12-04T17:04:09.913146Z"
+     "end_time": "2023-12-04T17:19:40.427619Z",
+     "start_time": "2023-12-04T17:19:40.422142Z"
     }
    },
    "outputs": [],
@@ -54,12 +54,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "id": "9c32c88a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-04T17:08:22.940539Z",
-     "start_time": "2023-12-04T17:08:22.934598Z"
+     "end_time": "2023-12-04T17:19:41.118248Z",
+     "start_time": "2023-12-04T17:19:41.113867Z"
     }
    },
    "outputs": [],
@@ -76,12 +76,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "id": "37141864",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-04T17:08:23.413856Z",
-     "start_time": "2023-12-04T17:08:23.395223Z"
+     "end_time": "2023-12-04T17:19:41.920707Z",
+     "start_time": "2023-12-04T17:19:41.905134Z"
     }
    },
    "outputs": [
@@ -91,7 +91,7 @@
        "22488"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,12 +103,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
+   "id": "c899bc79",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-04T17:21:25.280366Z",
+     "start_time": "2023-12-04T17:21:25.268113Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "cards = np.array([ Card(l) for l in input.splitlines() ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "d0e778ab",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-04T17:07:13.625964Z",
-     "start_time": "2023-12-04T17:06:42.072385Z"
+     "end_time": "2023-12-04T17:21:29.623699Z",
+     "start_time": "2023-12-04T17:21:25.667076Z"
     }
    },
    "outputs": [
@@ -118,19 +133,19 @@
        "7013204"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cards = np.array([ Card(l) for l in input.splitlines() ])\n",
+    "\n",
     "to_process = np.full(cards.size, 1)\n",
     "for i, c in enumerate(to_process):\n",
     "    #assert cards[i].num == i, f\"{cards[i].num} is not {i+1}\" # sanity\n",
     "    for j in range(c):\n",
-    "        if wc := cards[i].win_count():\n",
-    "            wr = range(i+1, i+wc+1)\n",
+    "        if wc := cards[i].win_count:\n",
+    "            wr = np.arange(i+1, i+wc+1)\n",
     "            to_process[wr] = to_process[wr] + 1\n",
     "sum(to_process)"
    ]
