--- a/2023/day5-py.ipynb
+++ b/2023/day5-py.ipynb
@@ -2,9 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 1,
    "id": "527c511b",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-05T20:34:59.811835Z",
+     "start_time": "2023-12-05T20:34:59.800393Z"
+    }
+   },
    "outputs": [],
    "source": [
     "input = \"\"\"seeds: 79 14 55 13\n",
@@ -44,20 +49,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ddc736c2",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-05T20:35:04.599639Z",
+     "start_time": "2023-12-05T20:35:04.596436Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "with open('.day5-input.txt', 'r') as f:\n",
-    "    input = f.read()"
+    "#with open('.day5-input.txt', 'r') as f:\n",
+    "#    input = f.read()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "8efb8164",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-05T20:35:06.765942Z",
+     "start_time": "2023-12-05T20:35:06.762251Z"
+    }
+   },
    "outputs": [],
    "source": [
     "seeds, *rest = input.split('\\n\\n')\n",
@@ -66,9 +81,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "19b5198b",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-05T20:35:07.042926Z",
+     "start_time": "2023-12-05T20:35:07.037196Z"
+    }
+   },
    "outputs": [],
    "source": [
     "class Mapping:\n",
@@ -94,49 +114,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "9eeff72b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "579439039"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cache = {}\n",
-    "def lookup(seeds):\n",
-    "    lowest = None\n",
-    "    for seed in seeds:\n",
-    "        n = seed\n",
-    "        if seed in cache:\n",
-    "            n = cache[seed]\n",
-    "        else:\n",
-    "            for m in mappings:\n",
-    "                n = m.to(n)\n",
-    "            cache[seed] = n\n",
-    "        if lowest is None or n < lowest:\n",
-    "            lowest = n\n",
-    "    return lowest\n",
-    "lookup(seeds)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
-   "id": "d9b48829",
-   "metadata": {},
+   "id": "9eeff72b",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-05T20:35:07.614062Z",
+     "start_time": "2023-12-05T20:35:07.607079Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'seeds: 1514493331 295250933 3793791524 105394212 828589016 654882197 658370118 49359719 4055197159 59237418 314462259 268880047 2249227634 74967914 2370414906 38444198 3291001718 85800943 2102534948 5923540'"
+       "35"
       ]
      },
      "execution_count": 5,
@@ -145,45 +135,191 @@
     }
    ],
    "source": [
-    "seeds, *_ = input.split('\\n\\n')\n",
-    "seeds"
+    "def lookup(seeds):\n",
+    "    lowest = float('inf')\n",
+    "    for seed in seeds:\n",
+    "        n = seed\n",
+    "        for m in mappings:\n",
+    "            n = m.to(n)\n",
+    "        if n < lowest:\n",
+    "            lowest = n\n",
+    "    return lowest\n",
+    "lookup(seeds)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8de5da4e",
-   "metadata": {},
-   "outputs": [],
+   "id": "d9b48829",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-05T20:35:07.993148Z",
+     "start_time": "2023-12-05T20:35:07.988398Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[range(79, 93), range(55, 68)]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "seeds, *_ = input.split('\\n\\n')\n",
     "it = iter(seeds[7:].split(' '))\n",
-    "seed_ranges = [ range(int(x), int(x)+int(next(it))) for x in it ]"
+    "seed_ranges = [ range(int(x), int(x)+int(next(it))) for x in it ]\n",
+    "seed_ranges"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ab2f0951",
-   "metadata": {},
-   "outputs": [],
+   "id": "551532ac",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-05T20:35:08.520626Z",
+     "start_time": "2023-12-05T20:35:08.511526Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[range(55, 68), range(79, 93)]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import itertools"
+    "seed_ranges = sorted(seed_ranges, key=lambda r: r.start)\n",
+    "def shorten(seed_ranges):\n",
+    "    new_ranges = []\n",
+    "    i = 0\n",
+    "    while i < len(seed_ranges):\n",
+    "        c = seed_ranges[i]\n",
+    "        if i+1 >= len(seed_ranges):\n",
+    "            new_ranges.append(c) \n",
+    "            break\n",
+    "        n = seed_ranges[i+1]\n",
+    "        #print(f\"{c} to {n}\")\n",
+    "        new_ranges = []\n",
+    "        if c.stop < n.start:\n",
+    "            new_ranges.append(c)\n",
+    "        elif c.stop > n.stop:\n",
+    "            i += 1 # skip next\n",
+    "        elif c.stop < n.stop:\n",
+    "            # they overlap, erge\n",
+    "            new_ranges.append(range(c.start, n.stop))\n",
+    "            i += 1 # skip next\n",
+    "        #print(f\"\\tnew {new_ranges}\")\n",
+    "        i += 1\n",
+    "    if new_ranges != seed_ranges:\n",
+    "        return shorten(new_ranges)\n",
+    "    return new_ranges\n",
+    "\n",
+    "shorten(seed_ranges)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "98b68f55",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-05T20:35:09.154778Z",
+     "start_time": "2023-12-05T20:35:09.152228Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "lookup(itertools.chain(*seed_ranges))"
+    "#import itertools\n",
+    "#lookup(itertools.chain(*seed_ranges)) # oh god slow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b4fc7591",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-05T20:35:09.524304Z",
+     "start_time": "2023-12-05T20:35:09.514425Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import asyncio\n",
+    "from concurrent.futures import ProcessPoolExecutor\n",
+    "import multiprocessing as mp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "219b5413",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-05T20:35:10.103489Z",
+     "start_time": "2023-12-05T20:35:10.095215Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def split(a, n):\n",
+    "    k, m = divmod(len(a), n)\n",
+    "    return (a[i*k+min(i, m):(i+1)*k+min(i+1, m)] for i in range(n))\n",
+    "\n",
+    "async def main():\n",
+    "    loop = asyncio.get_running_loop()\n",
+    "    \n",
+    "    futures = []\n",
+    "\n",
+    "    with ProcessPoolExecutor(5, mp_context=mp.get_context('fork')) as pool:\n",
+    "        for e in seed_ranges:\n",
+    "            for part in split(e, 3): # 3 parts per, so len(seed_ranges)*3\n",
+    "                #print(f\"Adding {part} to task... for {alookup}\")\n",
+    "                r = loop.run_in_executor(pool, lookup, part)\n",
+    "                futures.append(r)\n",
+    "    \n",
+    "    lowest = await asyncio.gather(*futures)\n",
+    "    print(min(lowest))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a38b0afa",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-05T20:35:10.769671Z",
+     "start_time": "2023-12-05T20:35:10.730955Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "46\n"
+     ]
+    }
+   ],
+   "source": [
+    "await main() # still takes like an hour"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77befccd",
+   "id": "75f91438",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -191,7 +327,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -205,7 +341,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": false,
+   "sideBar": false,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": false,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
