--- a/2023/day4-py.ipynb
+++ b/2023/day4-py.ipynb
@@ -2,9 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "id": "4f9976b3",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-04T17:19:38.694580Z",
+     "start_time": "2023-12-04T17:19:38.683533Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import re\n",
@@ -13,9 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 3,
    "id": "4f4315a6",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-04T16:55:03.850145Z",
+     "start_time": "2023-12-04T16:55:03.847086Z"
+    }
+   },
    "outputs": [],
    "source": [
     "input = \"\"\"Card 1: 41 48 83 86 17 | 83 86  6 31 17  9 48 53\n",
@@ -28,237 +38,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 2,
    "id": "4c0c1d9e",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-04T17:19:40.427619Z",
+     "start_time": "2023-12-04T17:19:40.422142Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "with open('.day4-input.txt', 'r') as f:\n",
+    "with open('../.day4-input.txt', 'r') as f:\n",
     "    input = f.read()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 3,
    "id": "9c32c88a",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-04T17:19:41.118248Z",
+     "start_time": "2023-12-04T17:19:41.113867Z"
+    }
+   },
    "outputs": [],
    "source": [
     "class Card:\n",
     "    def __init__(self, seed:str):\n",
     "        num, winners, mine = re.split(r'[:|]', seed[5:])\n",
     "        self.num = int(num)\n",
-    "        self.winning = np.fromstring(winners, sep=' ')\n",
-    "        self.numbers = np.fromstring(mine, sep=' ')\n",
-    "        \n",
-    "    def win_count(self) -> int:\n",
-    "        return np.intersect1d(self.winning, self.numbers).size\n",
-    "    \n",
-    "    def score(self) -> int:\n",
-    "        winners = self.win_count()\n",
-    "        return pow(2, winners-1) if winners else 0"
+    "        winning = np.fromstring(winners, sep=' ')\n",
+    "        numbers = np.fromstring(mine, sep=' ')\n",
+    "        self.win_count = np.intersect1d(winning, numbers).size\n",
+    "        self.score = pow(2, self.win_count-1) if self.win_count else 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 4,
    "id": "37141864",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-04T17:19:41.920707Z",
+     "start_time": "2023-12-04T17:19:41.905134Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "13"
+       "22488"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cards = map(Card, input.splitlines())\n",
-    "sum(map(Card.score, cards))"
+    "sum([c.score for c in cards])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "id": "7d7d4867",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 131,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 10,
+   "id": "c899bc79",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-04T17:21:25.280366Z",
+     "start_time": "2023-12-04T17:21:25.268113Z"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
-    "cards[2].num"
+    "cards = np.array([ Card(l) for l in input.splitlines() ])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 11,
    "id": "d0e778ab",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-04T17:21:29.623699Z",
+     "start_time": "2023-12-04T17:21:25.667076Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 2, 3, 4]"
+       "7013204"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(range(1, 5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 159,
-   "id": "84d5cd23",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<__main__.Card object at 0x7f8d45cf6520>\n",
-      "<__main__.Card object at 0x7f8d45cf60a0>\n",
-      "<__main__.Card object at 0x7f8d45cf6640>\n",
-      "<__main__.Card object at 0x7f8d45c8f9d0>\n",
-      "<__main__.Card object at 0x7f8d45c8fb80>\n",
-      "<__main__.Card object at 0x7f8d45c8ff40>\n",
-      "[array([1, 2, 3, 4]), array([2, 3]), array([3, 4]), array([4])]\n"
-     ]
-    }
-   ],
-   "source": [
-    "cards = np.array([ Card(l) for l in input.splitlines() ])\n",
     "\n",
-    "def process(s):\n",
-    "    wins = []\n",
-    "    for num in s:\n",
-    "        print(cards[num])\n",
-    "    for c in cards:\n",
-    "        if wc := c.win_count():\n",
-    "            wins.append(np.arange(c.num, c.num+wc))\n",
-    "    print(wins)\n",
-    "            \n",
-    "process(np.arange(0, len(cards)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 140,
-   "id": "1b0e888d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Process 1 and won 4 (2..5) range(1, 5)\n",
-      "\t1\n",
-      "Process 2 and won 2 (3..4) range(2, 4)\n",
-      "\t2\n",
-      "Process 3 and won 2 (4..5) range(3, 5)\n",
-      "\t3\n",
-      "Process 4 and won 1 (5..5) range(4, 5)\n",
-      "\t4\n",
-      "Process 5 and won 0 (6..5) range(5, 5)\n",
-      "\t4\n",
-      "Process 5 and won 0 (6..5) range(5, 5)\n",
-      "\t3\n",
-      "Process 4 and won 1 (5..5) range(4, 5)\n",
-      "\t4\n",
-      "Process 5 and won 0 (6..5) range(5, 5)\n",
-      "\t2\n",
-      "Process 3 and won 2 (4..5) range(3, 5)\n",
-      "\t3\n",
-      "Process 4 and won 1 (5..5) range(4, 5)\n",
-      "\t4\n",
-      "Process 5 and won 0 (6..5) range(5, 5)\n",
-      "\t4\n",
-      "Process 5 and won 0 (6..5) range(5, 5)\n",
-      "\t3\n",
-      "Process 4 and won 1 (5..5) range(4, 5)\n",
-      "\t4\n",
-      "Process 5 and won 0 (6..5) range(5, 5)\n",
-      "\t4\n",
-      "Process 5 and won 0 (6..5) range(5, 5)\n",
-      "Process 2 and won 2 (3..4) range(2, 4)\n",
-      "\t2\n",
-      "Process 3 and won 2 (4..5) range(3, 5)\n",
-      "\t3\n",
-      "Process 4 and won 1 (5..5) range(4, 5)\n",
-      "\t4\n",
-      "Process 5 and won 0 (6..5) range(5, 5)\n",
-      "\t4\n",
-      "Process 5 and won 0 (6..5) range(5, 5)\n",
-      "\t3\n",
-      "Process 4 and won 1 (5..5) range(4, 5)\n",
-      "\t4\n",
-      "Process 5 and won 0 (6..5) range(5, 5)\n",
-      "Process 3 and won 2 (4..5) range(3, 5)\n",
-      "\t3\n",
-      "Process 4 and won 1 (5..5) range(4, 5)\n",
-      "\t4\n",
-      "Process 5 and won 0 (6..5) range(5, 5)\n",
-      "\t4\n",
-      "Process 5 and won 0 (6..5) range(5, 5)\n",
-      "Process 4 and won 1 (5..5) range(4, 5)\n",
-      "\t4\n",
-      "Process 5 and won 0 (6..5) range(5, 5)\n",
-      "Process 5 and won 0 (6..5) range(5, 5)\n",
-      "Process 6 and won 0 (7..6) range(6, 6)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "7770"
-      ]
-     },
-     "execution_count": 140,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cards = [ Card(l) for l in input.splitlines() ]\n",
-    "total = 0\n",
-    "\n",
-    "def process(card, total):\n",
-    "    wc = card.win_count()\n",
-    "    total += wc\n",
-    "    print(f\"Process {card.num} and won {wc} ({card.num+1}..{card.num+wc}) {range(card.num, card.num+wc)}\")\n",
-    "    for i in range(card.num, card.num+wc):\n",
-    "        print(f\"\\t{i}\")\n",
-    "        total += process(cards[i], total)\n",
-    "    return total\n",
-    "\n",
-    "    \n",
-    "for card in cards:\n",
-    "    total += process(card, 0)\n",
-    "    \n",
-    "total"
+    "to_process = np.full(cards.size, 1)\n",
+    "for i, c in enumerate(to_process):\n",
+    "    #assert cards[i].num == i, f\"{cards[i].num} is not {i+1}\" # sanity\n",
+    "    for j in range(c):\n",
+    "        if wc := cards[i].win_count:\n",
+    "            wr = np.arange(i+1, i+wc+1)\n",
+    "            to_process[wr] = to_process[wr] + 1\n",
+    "sum(to_process)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f7cae00",
+   "id": "de3a6f79",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -266,7 +161,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -280,7 +175,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": false,
+   "sideBar": false,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": false,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
