--- a/2023/day1-go.ipynb
+++ b/2023/day1-go.ipynb
@@ -126,7 +126,20 @@
    "name": "go",
    "nbconvert_exporter": "",
    "pygments_lexer": "",
-   "version": "go1.19.1"
+   "version": "go1.20.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": false,
+   "sideBar": false,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": false,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
